experimental results for most of the experiments
  * load experiments did not work (not really useful in this case)
  * predictive experiments did not work (also not useful)

--- a/.gitignore
+++ b/.gitignore
@@ -166,12 +166,12 @@ pip-log.txt
 /php
 /default.cfg
 
-# loggering
-*.log
-
 # latex
 *.bbl
 *.blg
 *.aux
 *.synctex.gz
 *.fls
+
+# pid tracking
+*_pid
