--- a/paper/Rakefile
+++ b/paper/Rakefile
@@ -8,7 +8,7 @@ unless (File.exist? "#{name}.fls")
         sh "#{latex} -recorder #{name}"
         rm "#{name}.pdf"
 end
-deps = File.open("#{name}.fls").to_a.select{|i| i.start_with? "INPUT"}.map{|i| i.split(" ")[1].chomp} + ["bib.bib"]
+deps = File.open("#{name}.fls").to_a.select{|i| i.start_with? "INPUT"}.map{|i| i.split(" ")[1].chomp}
 file "#{name}.pdf" => deps do |t|
 	sh "#{latex} #{name}"
 	sh "grep -q citation #{name}.aux && bibtex #{name} || echo skipping bibtex" #only run bibtex if needed
@@ -20,10 +20,6 @@ task :view => "#{name}.pdf" do |t|
         sh "open #{name}.pdf"
 end
 
-file "bib.bib" => ["basic.bib","extra.bib"] do |t|
-	sh "cat #{t.prerequisites.join(" ")} > #{t.name}"
-end
-
 task :all => "#{name}.pdf" do |t|
 end
 
@@ -33,5 +29,4 @@ task :clean  do |t|
         ["bbl","fls","pdf","log","aux","blg"].each do |ext|
                 rm name+"."+ext , :force => true
         end
-        rm "bib.bib"
 end
